Prevent popup overflow

--- a/resources/assets/less/bem/notification-popup.less
+++ b/resources/assets/less/bem/notification-popup.less
@@ -36,7 +36,7 @@
     -webkit-overflow-scrolling: touch;
     overflow: auto;
     padding: 0 5px;
-    max-height: calc(var(--vh, 1vh) * 100 - (@nav2-height + 20px));
+    max-height: calc(var(--vh, 1vh) * 100 - (@nav2-height + 30px)); // 30px is the parent's padding
     display: grid;
     grid-gap: 10px;
   }
